[ modify ] 新增組織成員改多位
