# develop/swagger_output.json
@@ -381,7 +381,7 @@
         "tags": [
           "Organization - 組織"
         ],
-        "description": "新增組織成員",
+        "description": "新增多位組織成員",
         "parameters": [
           {
             "name": "organizationId",
@@ -395,8 +395,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
-                  "example": "any"
+                "userIdList": {
+                  "example": [
+                    "646ae3305a055110bd4493c0"
+                  ]
                 }
               }
             }
@@ -865,7 +867,7 @@
         "tags": [
           "Boards - 看板"
         ],
-        "description": "新增看板成員",
+        "description": "新增多位看板成員",
         "parameters": [
           {
             "name": "boardId",
@@ -879,8 +881,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
-                  "example": "any"
+                "userIdList": {
+                  "example": [
+                    "646ae3305a055110bd4493c0"
+                  ]
                 }
               }
             }
@@ -1341,7 +1345,7 @@
         "tags": [
           "Cards - 卡片"
         ],
-        "description": "新增卡片成員",
+        "description": "新增多位卡片成員",
         "parameters": [
           {
             "name": "cardId",
@@ -1355,9 +1359,9 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
-                  "example": "any"
-                }
+                "example": [
+                  "646ae3305a055110bd4493c0"
+                ]
               }
             }
           }
